# SkinSolutionAI

./: 12.py  app.py  main.py  main_new.py  main_old.py  pyproject.toml  streamlit_app.py
assets/: style.css  style_copy.css
data/: doctors.py  products.py
instance/: skinhealth.db
models/: child_scaler.joblib  child_skin_model.joblib  ensemble_scaler.joblib  gradient_boosting_model.joblib  scaler.joblib  severe_scaler.joblib  svm_model.joblib
pages/: cosmetic_login.py  product_recommendations.py  view_analysis.py
pages/.streamlit/: config.toml
templates/: login.html  register.html
utils/: add_user_type_migration.py  ai_analysis.py  auth.py  auth_old.py  body_part_detection.py  chat.py  database.py  datebase_old.py  db_migration.py  db_migration_cosmetic_products.py  db_migration_old.py  db_migration_published_analysis.py  db_migration_update_cosmetic_products.py  image_processing.py  language.py  location.py  ml_ensemble.py  ml_model.py  product_management.py  product_recommendation.py  published_analysis.py  specialized_models.py
