[project]
name = "SkinHealthAI"
version = "0.1.0"
description = "Professional Skin Analysis"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.2",
    "numpy>=2.2.2",
    "openai>=1.61.0",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.6.1",
    "streamlit>=1.41.1",
    "trafilatura>=2.0.0",
    "geopy>=2.3.0",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "pandas>=2.0.0",
    "altair>=5.0.0",
]
